[package]
name = "prcs"
version = "0.1.0"
authors = ["Tim Seckinger <seckinger.tim@gmail.com>"]
description = "The Swiss Army knife for running processes"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
nom = "^6.1.0"

[dev-dependencies]
insta = "^1.7.1"
tempfile = "^3.2.0"
