[package]
name = "prcs"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/jeysal/prcs"
authors = ["Tim Seckinger <seckinger.tim@gmail.com>"]
description = "The Swiss Army knife for running processes"
categories = ["command-line-utilities"]
keywords = ["CLI", "process", "command", "utility"]

[dependencies]
clap = "3.0.0-beta.2"
nom = "^6.1.0"

[dev-dependencies]
insta = "^1.7.1"
tempfile = "^3.2.0"
